--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
  <h1>Paisagens Encantadoras</h1>
-       <img src="principal.jpeg" alt="paisagens" width="300">
+       <img src="imagens/principal.jpeg" alt="paisagens" width="300">
 </body>
 </html>
