--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
  <h1>Paisagens Encantadoras</h1>
-       <img src="imagens/principal.jpeg" alt="paisagens" width="300">
+       <img src="" alt="paisagens" width="300">
     <header class=" p-5">
 
         <nav class="container d-flex justify-content-between align-items-center" >
-            <img src="imagens/img3.jpeg" class="nav-img " loading="lazy">
+            <img src="" class="nav-img " loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
