--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
  <h1>Paisagens Encantadoras</h1>
-       <img src="" alt="paisagens" width="300">
+       <img src="" alt="" width="300">
     <header class=" p-5">
 
         <nav class="container d-flex justify-content-between align-items-center" >
@@ -33,7 +33,7 @@
         <section id="inicio" class="my-5">
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
-                    <h1 class="display-4 text-white fst-italic fw-bold">Você vai começar a Ver Maravilhas</h1>
+                    <h1 class="display-4 text-white fst-italic fw-bold">Você vai começar a Ver Maravihas</h1>
                     <img src="imagens/img1.jpeg" class="mb-3" width="563"
                         height="278" loading="lazy">
                     <a href="#Borzuk Lindo"
