--- a/index.html
+++ b/index.html
@@ -43,6 +43,47 @@
                 <img src="imagens/img2.jpeg" alt="A imagem apresenta uma cascata e um lago de uma cor magínifica" title="Paisagens" class="img-fluid img-inicio">
 
               </div>
+         </section>
+        <section id="PAISAGENS" class="my-5 pt-6 secao-tropicalia" tabindex="0" aria-label="Seção explicativa sobre a tropicália">
+            <div class="container d-flex align-items-center ">
+                <div class="col-4 d-flex justify-content-center ">
+                    <img src="img/image (1).png" class="rounded-pill" width="273" height="331" loading="lazy">
+                </div>
+                <div class="col-5">
+                    <h2>O QUE AS PAISAGENS TE FAZ SENTIR?</h2>
+                    <p class="p-2">As paisagens despertam em mim um misto de paz e admiração
+                        Quando contemplo montanhas, sinto a grandeza da vida; diante do mar, a infinita liberdade; nos campos abertos, uma doce serenidade. Cada detalhe—o voo dos pássaros,
+                        o balanço das árvores, o rio que corre sem pressa—me lembra que o mundo respira além das minhas preocupações.
+                         É como se a natureza sussurrasse: "Você é parte disso tudo", e, 
+                        por um instante, eu me sinto menor e, ao mesmo tempo, mais completo.</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="galeria" tabindex="0" aria-label="Seção de galeria de imagens">
+            <h2 class="text-center pt-5">Galeria</h2>
+            <div class="container p-3 mt-3 fundo-galeria ">
+
+                <div class="row justify-content-md-center">
+                    <div class="col-md-4">
+                        <img src="img/lossy-page1-640px-Jorge_Ben_e_o_Trio_Mocotó_no_Teatro_da_Lagoa,_1971.tif.jpg"
+                            class="img-fluid rounded-5" loading="lazy">
+                    </div>
+                    <div class="col-md-4">
+                        <img src="img/lossy-page1-640px-Os_Mutantes_2.tif.jpg" class="img-fluid rounded-5"
+                            loading="lazy">
+                    </div>
+                </div>
+                <div class="row mt-4  justify-content-md-center">
+                    <div class="col-md-4">
+                        <img src="img/lossy-page1-640px-Gilberto_Gil_nos_anos_1960.tif.jpg" class="img-fluid rounded-5" loading="lazy">
+                    </div>
+                    <div class="col-md-4">
+                        <img src="img/lossy-page1-640px-Caetano_Veloso_no_III_Festival_da_Música_Popular.tif.jpg"
+                            class="img-fluid rounded-5" loading="lazy">
+                    </div>
+                </div>
+             </div>
         </section>
 </body>
 </html>
