--- a/index.html
+++ b/index.html
@@ -51,11 +51,14 @@
                 </div>
                 <div class="col-5">
                     <h2>O QUE AS PAISAGENS TE FAZ SENTIR?</h2>
-                    <p class="p-2">As paisagens despertam em mim um misto de paz e admiração
-                        Quando contemplo montanhas, sinto a grandeza da vida; diante do mar, a infinita liberdade; nos campos abertos, uma doce serenidade. Cada detalhe—o voo dos pássaros,
-                        o balanço das árvores, o rio que corre sem pressa—me lembra que o mundo respira além das minhas preocupações.
-                         É como se a natureza sussurrasse: "Você é parte disso tudo", e, 
-                        por um instante, eu me sinto menor e, ao mesmo tempo, mais completo.</p>
+                    <p class="p-2">As paisagens são como poemas silenciosos que falam diretamente à alma.
+                        Quando me deparo com uma vista ampla—seja o horizonte dourado de um pôr do sol, a serenidade de um lago espelhado ou a imponência
+                        de uma floresta antiga—sinto uma conexão profunda com algo maior que eu.
+                        Há uma mistura de humildade e êxtase: humildade diante da grandiosidade da natureza, que existe e resiste além do tempo humano,
+                        e êxtase por poder testemunhar sua beleza efêmera. O vento, as cores, os cheiros… tudo me convida a estar presente, 
+                        a respirar fundo e a lembrar que a vida não é só feita de obrigações, mas também de contemplação.
+                        Às vezes, a paisagem acalma, como um abraço da terra; outras,
+                        inquieta, pois me faz querer partir, explorar, perder-me nela.</p>
                 </div>
             </div>
         </section>
