--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
                     <img src="img/image (1).png" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>O QUE AS PAISAGENS TE FAZ SENTIR?</h2>
+                    <h2>O QUE AS PAISAGENS ME FAZEM SENTIR?</h2>
                     <p class="p-2">As paisagens são como poemas silenciosos que falam diretamente à alma.
                         Quando me deparo com uma vista ampla—seja o horizonte dourado de um pôr do sol, a serenidade de um lago espelhado ou a imponência
                         de uma floresta antiga—sinto uma conexão profunda com algo maior que eu.
-                        Há uma mistura de humildade e êxtase: humildade diante da grandiosidade da natureza, que existe e resiste além do tempo humano,
+                        Há uma mistura de humildade e êxtase: humildade diante da grandiosidade 
+                        da natureza, que existe e resiste além do tempo humano,
                         e êxtase por poder testemunhar sua beleza efêmera. O vento, as cores, os cheiros… tudo me convida a estar presente, 
                         a respirar fundo e a lembrar que a vida não é só feita de obrigações, mas também de contemplação.
                         Às vezes, a paisagem acalma, como um abraço da terra; outras,
