--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
                 <div class="col-5">
                     <h2>O QUE AS PAISAGENS ME FAZEM SENTIR?</h2>
                     <p class="p-2">As paisagens são como poemas silenciosos que falam diretamente à alma.
-                        Quando me deparo com uma vista ampla—seja o horizonte dourado de um pôr do sol, a serenidade de um lago espelhado ou a imponência
+                        Quando me deparo com uma vista ampla—seja o horizonte dourado de um 
+                       <br>pôr do sol, a serenidade de um lago espelhado ou a imponência
                        <br> de uma floresta antiga—sinto uma conexão profunda com algo maior que eu.
                        <br>Há uma mistura de humildade e êxtase: humildade diante da grandiosidade 
                        <br> da natureza, que existe e resiste além do tempo humano,
