--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
  <h1>Paisagens Encantadoras</h1>
-       <img src="" alt="" width="300">
+       <img src="1" alt="" width="300">
     <header class=" p-5">
 
         <nav class="container d-flex justify-content-between align-items-center" >
-            <img src="" class="nav-img " loading="lazy">
+            <img src="2" class="nav-img " loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
@@ -34,20 +34,20 @@
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Você vai começar a Ver Maravihas</h1>
-                    <img src="imagens/img1.jpeg" class="mb-3" width="563"
+                    <img src="imagens/img3.jpeg" class="mb-3" width="563"
                         height="278" loading="lazy">
                     <a href="#Borzuk Lindo"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
                 </div>
-                <img src="imagens/img2.jpeg" alt="A imagem apresenta uma cascata e um lago de uma cor magínifica" title="Paisagens" class="img-fluid img-inicio">
+                <img src="imagens/img4.jpeg" alt="A imagem apresenta uma cascata e um lago de uma cor magínifica" title="Paisagens" class="img-fluid img-inicio">
 
               </div>
          </section>
         <section id="PAISAGENS" class="my-5 pt-6 secao-tropicalia" tabindex="0" aria-label="Seção explicativa sobre a tropicália">
             <div class="container d-flex align-items-center ">
                 <div class="col-4 d-flex justify-content-center ">
-                    <img src="img/image (1).png" class="rounded-pill" width="273" height="331" loading="lazy">
+                    <img src="imagens/img5.jpeg" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
                     <h2>O QUE AS PAISAGENS ME FAZEM SENTIR?</h2>
