--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css"&gt;
     <link rel="stylesheet" href="style.css">
 <body>
- <h1>Paisagens Encantadoras</h1>
-       <img src="1" alt="" width="300">
-    <header class=" p-5">
+  <header class=" p-5">
 
         <nav class="container d-flex justify-content-between align-items-center" >
-            <img src="2" class="nav-img " loading="lazy">
+            <img src="img/logo.png" class="nav-img " loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
@@ -32,39 +30,36 @@
         </nav>
        
     </header>
-    <main class="container my-5">
+
+ <main class="container my-5">
 
         <section id="inicio" class="my-5">
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
-                    <h1 class="display-4 text-white fst-italic fw-bold">Você vai começar a Ver Maravihas</h1>
-                    <img src="imagens/img3.jpeg" class="mb-3" width="563"
+                    <h1 class="display-4 text-white fst-italic fw-bold">Você vai começar a Ver Maravilhas</h1>
+                    <img src="imagem/img2.jpg" class="mb-3" width="563"
                         height="278" loading="lazy">
                     <a href="#Borzuk Lindo"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
                 </div>
-                <img src="imagens/img4.jpeg" alt="A imagem apresenta uma cascata e um lago de uma cor magínifica" title="Paisagens" class="img-fluid img-inicio">
+                <img src="img/lossy-page1-640px-Os_Mutantes.tif (1).png" alt="A imagem apresenta o grupo musical Os mutantes, sao tres pessoas cantando em um microfone" title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
 
               </div>
-         </section>
-        <section id="PAISAGENS" class="my-5 pt-6 secao-tropicalia" tabindex="0" aria-label="Seção explicativa sobre a tropicália">
+        </section>
+
+       <section id="tropicalia" class="my-5 pt-6 secao-tropicalia" tabindex="0" aria-label="Seção explicativa sobre a tropicália">
             <div class="container d-flex align-items-center ">
                 <div class="col-4 d-flex justify-content-center ">
-                    <img src="imagens/img5.jpeg" class="rounded-pill" width="273" height="331" loading="lazy">
+                    <img src="img/image (1).png" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>O QUE AS PAISAGENS ME FAZEM SENTIR?</h2>
-                    <p class="p-2">As paisagens são como poemas silenciosos que falam diretamente à alma.
-                       <br>Quando me deparo com uma vista ampla—seja o horizonte dourado de um 
-                       <br>pôr do sol, a serenidade de um lago espelhado ou a imponência
-                       <br> de uma floresta antiga—sinto uma conexão profunda com algo maior que eu.
-                       <br>Há uma mistura de humildade e êxtase: humildade diante da grandiosidade 
-                       <br> da natureza, que existe e resiste além do tempo humano,
-                       <br> e êxtase por poder testemunhar sua beleza efêmera. O vento, as cores, os cheiros… tudo me convida a estar presente, 
-                       <br>a respirar fundo e a lembrar que a vida não é só feita de obrigações, mas também de contemplação.
-                       <br>Às vezes, a paisagem acalma, como um abraço da terra; outras,
-                       <br>inquieta, pois me faz querer partir, explorar, perder-me nela.</p>
+                    <h2>Estamos falando de programação!!!</h2>
+                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
+                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
+                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
+                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
+                        influências estrangeiras, especialmente do rock e da música pop. Fonte: Site Toda a matéria</p>
                 </div>
             </div>
         </section>
@@ -94,5 +89,10 @@
                 </div>
              </div>
         </section>
+
+
+   
+
 </body>
 </html>
+
