--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class=" p-5">
 
         <nav class="container d-flex justify-content-between align-items-center" >
-            <img src="imagens/img1.jpeg" class="nav-img " loading="lazy">
+            <img src="imagens/principal.jpeg" class="nav-img " loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
@@ -37,7 +37,7 @@
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Você vai começar a Ver Maravilhas</h1>
-                    <img src="imagem/img2.jpg" class="mb-3" width="563"
+                    <img src="imagens/img1.jpeg" class="mb-3" width="563"
                         height="278" loading="lazy">
                     <a href="#Borzuk Lindo"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
