--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
        <section id="tropicalia" class="my-5 pt-6 secao-tropicalia" tabindex="0" aria-label="Seção explicativa sobre a tropicália">
             <div class="container d-flex align-items-center ">
                 <div class="col-4 d-flex justify-content-center ">
-                    <img src="imagens/img3.jpeg" class="rounded-pill" width="273" height="331" loading="lazy">
+                    <img src="imagens/img3.jpeg" class="rounded-pill" width="273" height="200" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>Estamos falando de programação!!!</h2>
+                    <h2>Paisagens!</h2>
                     <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
                         brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
                         abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
