--- a/index.html
+++ b/index.html
@@ -55,11 +55,7 @@
                 </div>
                 <div class="col-5">
                     <h2>Paisagens!</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop. Fonte: Site Toda a matéria</p>
+                    <p class="p-2">Paisagens são a beleza visível de um lugar, uma composição de elementos naturais e/ou construídos que formam um panorama. </p>
                 </div>
             </div>
         </section>
