--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class=" p-5">
 
         <nav class="container d-flex justify-content-between align-items-center" >
-            <img src="imagens/principal.jpeg" class="nav-img " loading="lazy">
+            <img src="imagens/principal.jpeg" width="273" height="200" class="nav-img " loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
