--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
                 </div>
                 <div class="col-5">
                     <h2>Paisagens!</h2>
-                    <p class="p-2">Paisagens são a beleza visível de um lugar, uma composição de elementos naturais e/ou construídos que formam um panorama. </p>
+                    <p class="p-2">"A natureza pinta quadros que a alma admira." Esta frase, simples mas profunda, evoca a beleza intrínseca das paisagens e a capacidade da natureza de tocar o nosso interior. 
+                        Ela sugere que a contemplação da paisagem não é apenas um exercício visual, mas também uma experiência emocional e espiritual. </p>
                 </div>
             </div>
         </section>
