--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="col-5">
                     <h2>Paisagens!</h2>
                     <p class="p-2">"A natureza pinta quadros que a alma admira." Esta frase, simples mas profunda, evoca a beleza intrínseca das paisagens e a capacidade da natureza de tocar o nosso interior. 
-                        Ela sugere que a contemplação da paisagem não é apenas um exercício visual, mas também uma experiência emocional e espiritual. </p>
+                        <br>Ela sugere que a contemplação da paisagem não é apenas um exercício visual, mas também uma experiência emocional e espiritual. </p>
                 </div>
             </div>
         </section>
